utf8 bug fix and scan pages (#113)